<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QuestChallenge</string>
    <string name="action_settings">Settings</string>
    //Main Activity
    <string name="cant_contact_parse">Unable to contact the parse servers, please check connection.</string>
    //Login screen
    <string name="user_name">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="remember_user_name">Remember my user name</string>
    <string name="sign_up">Sign up</string>
    <string name="no_connection">Can not connect to the internet</string>
    <string name="retry_connection">Retry connection</string>
    <string name="must_be_connected">You need an internet connection to sign up</string>
    <string name="login_failed">User name or password invalid</string>
    <string name="login_timeout">Connecting to the login servers failed</string>
    <string name="user_name_required">A user name is required</string>
    <string name="password_required">A password is required</string>
    //Registration screen
    <string name="register_email">Email</string>
    <string name="display_name">Display name</string>
    <string name="take_picture">Click here to select a picture!</string>
    <string name="choose_display_name">Please enter a display name.</string>
    <string name="register_password">Password</string>
    <string name="verify_password">Verify password</string>
    <string name="register">Register</string>
    <string name="email_required">An email address is required.</string>
    <string name="not_email">Please use an e-mail address.</string>
    <string name="register_password_required">A password is required.</string>
    <string name="verify_password_required">Please verify your password.</string>
    <string name="passwords_dont_match">Passwords do not match.</string>
    <string name="trying_signup">Signing up, one moment...</string>
    <string name="email_taken">An account already exists with this e-mail.</string>
    //Quest Layout
    <string name="image_loading">Image loading.</string>
    //View pager
    <string name="choose_an_image">Choose an image</string>
    <string name="available_quests">Available Quests</string>
    <string name="accepted_quests">Accepted Quests</string>
    <string name="completed_quests">Completed Quests</string>
    //Quest list screen
    <string name="loading">loading</string>
    <string name="no_image_found">No image found</string>
    //Quest details screen
    <string name="accept_quest">Accept quest</string>
    <string name="complete_quest">Complete quest</string>
    <string name="quest_already_completed">You have completed this quest</string>
    //Settings screen
    <string name="public_name_description">This is the name that will be displayed when you post or accept a quest</string>
    <string name="public_name">Public name</string>
    <string name="change_name">Change name</string>
    <string name="pick_an_image">Pick an image</string>
    <string name="update_location">Update location</string>
    <string-array name="alignment_spinner">
        <item>Good</item>
        <item>Neutral</item>
        <item>Evil</item>
    </string-array>
    <string name="alignment_explanation">Alignment affects the quests you can see</string>
    <string name="update_picture">Update picture</string>

    <color name="green">#008000</color>
    <color name="red">#FF0000</color>
    <color name="grey">#CCCCCC</color>

    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
