<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.coopinc.questchallenge.app.RegistrationFragment">
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ImageView
        android:id="@+id/picture"
        android:layout_gravity="center"
        android:layout_width="200sp"
        android:layout_height="120sp"/>
        <TextView
            android:id="@+id/take_picture"
            android:text="@string/take_picture"
            android:layout_width="wrap_content"
            android:layout_height="120sp"
            android:layout_gravity="center"
            android:gravity="center"
            android:clickable="true"
            android:background="@color/wallet_holo_blue_light"/>
    </FrameLayout>
    <EditText
        android:inputType="textEmailAddress"
        android:id="@+id/register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint ="@string/register_email"
        android:paddingBottom="10sp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/display_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/display_name"
        android:paddingBottom="10sp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/register_password"
        android:password="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_password"
        android:paddingBottom="10sp"
        android:textSize="25sp"/>
    <EditText
        android:id="@+id/verify_password"
        android:password="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/verify_password"
        android:paddingBottom="10sp"
        android:textSize="25sp"/>
    <TextView
        android:id="@+id/trying_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/register"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>
